Correct a stylesheet issue (autoscroll - overflow-x: auto;)

--- a/assets/stylesheets/issue-todo-list.css
+++ b/assets/stylesheets/issue-todo-list.css
@@ -32,3 +32,9 @@
 .ui-tooltip{
     width: min-content !Important;
 }
+
+#content .autoscroll {
+    overflow-x: visible;
+}
+
+
